objects/copado__Static_Code_Analysis_Violation__c.object
<CustomObject>
    <description>This object will hold the details about every single violation found in Apex classes according to the specified ruleset.</description>
    <fields>
        <fullName>copado__File__c</fullName>
        <description>File analyzed by PMD.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Info_URL_Link__c</fullName>
        <formula>HYPERLINK(copado__Info_URL__c, IMAGE(&apos;/img/msg_icons/info24.png&apos;, &apos;Info URL&apos;, 18, 18) )</formula>
        <label>Info URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Info_URL__c</fullName>
        <description>Link to the PMD documentation about the rule violated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copado__Line__c</fullName>
        <description>Line of code that violated the rule.</description>
        <label>Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Message__c</fullName>
        <description>Help message thrown by the rule violated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Priority__c</fullName>
        <description>Level of severity of the rule violated.</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Rule__c</fullName>
        <description>Name of the rule violated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Score__c</fullName>
        <formula>6 -  copado__Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Static_Code_Analysis_Result__c</fullName>
        <label>Static Code Analysis Result</label>
        <referenceTo>copado__Static_Code_Analysis_Result__c</referenceTo>
        <relationshipLabel>Static Code Analysis Violations</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Violations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Static Code Analysis Violation</label>
    <nameField>
        <displayFormat>SCV-{000000}</displayFormat>
        <label>Static Code Analysis Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Static Code Analysis Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>